[package]
name = "zzj_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "synchapi",
    "winbase",
]

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]
